Finished The Home Page

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 GOOGLE_ID = 389542011968-f9kv3el93kmq014i7isha75qs6mj6pud.apps.googleusercontent.com
 
 GOOGLE_CLIENT_SECRET=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
+
+MONGODB_URI = mongodb+srv://Promptopia2023:Promptopia2023@cluster0.rbeolux.mongodb.net/?retryWrites=true&w=majority
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL = http://localhost:3000
+NEXTAUTH_SECRET = 3KfdzIprDvZKLsnj3JS4ZPzj9gR2oaDRWNm2tsRqjgc=
